--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "express-handlebars": "^5.0.0",
+    "mongoose": "^5.9.24",
+    "node-schedule": "^1.3.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
