--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "express": "^4.17.1",
     "express-handlebars": "^5.0.0",
     "mongoose": "^5.9.24",
-    "node-schedule": "^1.3.2"
+    "node-schedule": "^1.3.2",
+    "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
